Updates for WRAP 2016

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-    background-image: url("/chicago-skyline-cropped.jpg");
+    background-image: url("/zhongzheng-lake.png");
     background-repeat: no-repeat;
     background-size: cover;
 
